==================================
Rilascio v2.0.13    del 08/06/2017
==================================

Aggiunta a RYWINZ la funzione di preview di documenti.

==================================
Rilascio v2.0.12    del 07/06/2017
==================================

Aggiunta una funzionalità standard per l'anteprima degli allegati.

==================================
Rilascio v2.0.11    del 05/06/2017
==================================

Aggiornato il componente phpThumb.

==================================
Rilascio v2.0.10    del 04/06/2017
==================================

Ego: aggiunta la funzione egoautomatic(u, p) per il collegamento da app.

==================================
Rilascio v2.0.9     del 02/06/2017
==================================

Miglioramenti estetici dei controlli di maschera e di Ego.

==================================
Rilascio v2.0.8     del 15/05/2017
==================================

rybox, rycode: corretto l'errore nel caso di disabilitazione con focus.

==================================
Rilascio v2.0.7     del 01/05/2017
==================================

ryQuiver: aggiunta la gestione di transcodifiche.

ryQue, ryUnbound: corretti errori di refresh.

Kanagawa: abilitato Legend alla gestione di big data.

==================================
Rilascio v2.0.6     del 28/03/2017
==================================

Utilizzata la centratura dei form.

==================================
Rilascio v2.0.5     del 26/03/2017
==================================

rytabs: possibilità di centrare il contenuto;

Aggiunto un gradiente come sfondo dei form.

Aggiunta la chiave per l'utilizzo delle mappe di Google.

Migliorato Postman.

==================================
Rilascio v2.0.4    del 15/03/2017
==================================

ryunbound: con autofit vengono preservate le colonne di larghezza zero.

==================================
Rilascio v2.0.3    del 18/10/2016
==================================
